# EspressifProjects

./: .gitignore  LICENSE.md  README.md
dual-blink/: .gitignore  CMakeLists.txt  README.md  sdkconfig
dual-blink/main/: main.cpp
esp32-c3-i2c-displays/: .gitignore  CMakeLists.txt  README.md  example_test.py
esp32-c3-i2c-displays/main/: Adafruit_Support.hpp  CMakeLists.txt  alphanumeric.cpp  alphanumeric.hpp  ht16k33.cpp  ht16k33.hpp  i2c_support.cpp  i2c_support.hpp  main.cpp  matrix8by16.cpp  matrix8by16.hpp  vt52_rom.cpp  vt52_rom.hpp
simple-webserver/: README.md  SimpleHttp.py  config.py  main.py
v4/dual-blink/: README.md
v4/dual-blink/main/: main.cpp
v4/esp32-c3-i2c-displays/: README.md  sdkconfig
v4/esp32-c3-i2c-displays/main/: Adafruit_BNO055.cpp  Adafruit_BNO055.hpp  Adafruit_Support.hpp  main.cpp  (+8 more)
v4/wifi-scan/: README.md
v5+/esp32-c3-i2c-displays/: CMakeLists.txt  README.md  sdkconfig
v5+/esp32-i2c-devices/: README.md  sdkconfig
v5+/esp32-i2c-devices/main/: Adafruit_BNO055.hpp  CMakeLists.txt  alphanumeric.cpp  ht16k33.hpp  i2c_support.hpp  main.cpp  matrix8by16.hpp  mcp23017.hpp  vt52_rom.cpp
v5+/esp32-s3-n32r8/: README.md  sdkconfig
v5+/esp32-s3-n32r8/main/: CMakeLists.txt  auto_build_wifi_event_switch.sh  chip_decode.cpp  chip_decode.hpp  main.cpp  max7219.cpp  max7219.hpp  neopixel_tools.cpp  neopixel_tools.hpp  utilities.cpp  utilities.hpp  vt52.hpp  webserver.cpp  webserver.hpp  wifi_tools.c  wifi_tools.h
v5+/esp32-webserver-sntp/: CMakeLists.txt  README.md
v5/colour_blink/: README.md  sdkconfig
v5/dualblink/: CMakeLists.txt  README.md  sdkconfig
v5/esp32-c3-i2c-displays/: README.md  sdkconfig
v5/esp32-s3-n32r8/: CMakeLists.txt  README.md  sdkconfig
v5/esp32-s3-n32r8/main/: CMakeLists.txt  main.cpp  neopixel_tools.cpp  neopixel_tools.hpp  utilities.cpp  utilities.hpp  webserver.cpp  webserver.hpp  wifi_tools.cpp  wifi_tools.hpp
v5/wifi-scan/: README.md  sdkconfig
wifi-scan/: README.md  sdkconfig
wifi-scan/main/: main.cpp
(+40 files in other folders)
