idf_component_register(SRCS "main.cpp"
                            "i2c_support.cpp"
                            "ht16k33.cpp"
                            "vt52_rom.cpp"
                            "matrix8by16.cpp"
                            "alphanumeric.cpp"
                            "Adafruit_BNO055.cpp"
                            "mcp23017.cpp"

                            INCLUDE_DIRS ".")
