idf_component_register(SRCS "main.cpp"
                            "chip_decode.cpp"
                            "neopixel_tools.cpp"
                            "wifi_tools.c"
                            "webserver.cpp"
                            "utilities.cpp"
                       INCLUDE_DIRS ".")
