idf_component_register(SRCS "main.cpp"
                            "chip_decode.cpp"
                            "max7219.cpp"
                            "neopixel_tools.cpp"
                            "utilities.cpp"
                            "webserver.cpp"
                            "wifi_tools.c"
                       INCLUDE_DIRS ".")
