idf_component_register(SRCS "main.cpp"
                            "chip_decode.cpp"
                            "neopixel_tools.cpp"
                            "wifi_tools.cpp"
                            "webserver.cpp"
                            "utilities.cpp"
                       INCLUDE_DIRS ".")
